           access to previous bars like this: MA.1 for MA previous bar, MA.2, MA.3 and so on. This syntax only works
           for the GUI plugin and not for scripts. Scripts have the GET_INDEX functions that allow more precision.
           This is to help give more flexibility to the GUI plugin.

           Thanks to 'stressedpiper' for a patch that greatly speeds up QuoteServer Search command results by
           including the name field in the search rather than conducting an additional details search.
           Updated the QuoteServer Search command docs to reflect the new returned format.

20101020:  Updating the dialogs to use a slightly different approach to popup confirm dialogs. Using yes/no buttons
           instead of the checkbox. Looks cleaner and less mouse interaction.

20101031:  BUG ID #3095457 - Group panel list now sorts properly.

20101101:  Created a new plugin branch for script commands. More flexibility for future expansion.

20101104:  Moved the Script panel into a new Misc plugin called Script. The panel size was becoming a limitation
           to future expansion.

20101105:  Changed the chart/group panel chart loading to a double click. The single click was getting in the way
           of right clicking the list and forcing an unwanted load. Unfortunately, I have not found a way
           to do both currently. Pressing enter key will also load the chart.

20101107:  Removed all of the dialogs for the indicator plugins and replaced with a common class. Less code
           and faster compile times as a result.

           Moved src/assistant class into lib and renamed to Doc. Help system can now be spawned from any dialog
           class that inherits lib/Dialog. All one needs to do is in each dialog constructor, set the html file
           to the _helpFile variable. xley: see the example in src/IndicatorDialog.cpp.

20101108:  Modified misc plugin dialog to inherit Dialog. Also fixed the misc plugin close button crash.
